--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,6 +1,6 @@
-public net.minecraft.inventory.container.LoomContainer field_217036_f # slotBanner
-public net.minecraft.inventory.container.LoomContainer field_217037_g # slotDye
-public net.minecraft.inventory.container.LoomContainer field_217038_h # slotPattern
-public net.minecraft.inventory.container.LoomContainer field_217039_i # output
-public net.minecraft.inventory.container.LoomContainer field_217034_d # field_217034_d
-public net.minecraft.inventory.container.LoomContainer func_217031_j()V # createOutputStack
+public net.minecraft.world.inventory.LoomMenu bannerSlot # slotBanner
+public net.minecraft.world.inventory.LoomMenu dyeSlot # slotDye
+public net.minecraft.world.inventory.LoomMenu patternSlot # slotPattern
+public net.minecraft.world.inventory.LoomMenu resultSlot # output
+public net.minecraft.world.inventory.LoomMenu lastSoundTime # field_217034_d
+public net.minecraft.world.inventory.LoomMenu setupResultSlot()V # createOutputStack
